docs: document Dx7Engine API in UGEN_REFERENCE, expand Csound porting analysis
Add the missing Dx7Engine, Dx7EngineLookupTables, and Dx7Patch entries
to UGEN_REFERENCE.md with full method signatures, parameter tables, and
fixed-point math conventions. These were never documented after the
dexed/msfa rewrite in 72abe2f.

Expand csound/PORTING_PLAN.md with detailed gap analysis:
- 10 missing high-value opcodes (babo, modal4, crossfm, fm4op, etc.)
- Existing FFT/IFFT infrastructure audit (19 analysis UGens, no spectral
  package needed)
- Algorithm-specific details: ReverbSC delay line lengths, newfils.c monolith
- PVS infrastructure: 13 source files, core ops priority
- Cross-opcode dependency graph and 5-phase roadmap
- Remove native csound binary dependency from test strategy
- Add Maven profile structure for Vector API/FFM

Expand csound/REFERENCE_GUIDE.md from 3 stubs to 11 documented opcodes:
full parameter tables, delay line lengths, technical notes, porting
progress checklist.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>